// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepList > renders correctly  1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with bulletIcon & sentiment 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #22674e;
  background: #daf6ec;
  border: 1px solid #daf6ec;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-6 path {
  fill: currentColor;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <svg
            class="emotion-6 emotion-7"
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill="black"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with bulletIcon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-6 path {
  fill: currentColor;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <svg
            class="emotion-6 emotion-7"
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M8 15C11.866 15 15 11.866 15 8C15 4.13401 11.866 1 8 1C4.13401 1 1 4.13401 1 8C1 11.866 4.13401 15 8 15ZM8 4C8.41421 4 8.75 4.33579 8.75 4.75V7.75C8.75 8.16421 8.41421 8.5 8 8.5C7.58579 8.5 7.25 8.16421 7.25 7.75V4.75C7.25 4.33579 7.58579 4 8 4ZM8 12C8.55228 12 9 11.5523 9 11C9 10.4477 8.55228 10 8 10C7.44772 10 7 10.4477 7 11C7 11.5523 7.44772 12 8 12Z"
              fill="black"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          Item 1
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with disabled state & bullet icon 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #727683;
  background: #e9eaeb;
  border: none;
}

.emotion-6 {
  vertical-align: middle;
  fill: currentColor;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.emotion-6 .fillStroke {
  stroke: currentColor;
  fill: none;
}

.emotion-6 path {
  fill: currentColor;
}

.emotion-8 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          <svg
            class="emotion-6 emotion-7"
            fill="none"
            viewBox="0 0 16 16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M12.166 3.126a.75.75 0 0 1 .208 1.04l-5 7.5a.75.75 0 0 1-1.154.114l-3-3a.75.75 0 0 1 1.06-1.06l2.353 2.353 4.493-6.739a.75.75 0 0 1 1.04-.208"
            />
          </svg>
        </div>
        <div
          class="emotion-8 emotion-9"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with disabled state 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #b5b7bd;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 2rem;
  height: 2rem;
  font-size: 1rem;
  color: #727683;
  background: #e9eaeb;
  border: none;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 32px;
  font-size: 24px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          <div>
            Item 1 with disabled state
          </div>
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepList > renders correctly with small size 1`] = `
<DocumentFragment>
  .emotion-0 {
  list-style: none;
  padding-left: 0;
  text-align: left;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  gap: 1.5rem;
  font-size:font-family: Inter,Asap,sans-serif;
  font-size: 1rem;
  font-weight: Regular;
  letter-spacing: 0;
  line-height: 1.5rem;
  paragraph-spacing: none;
  text-case: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  weight: 400;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 1rem;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  color: #222638;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 1.5rem;
  height: 1.5rem;
  font-size: 0.875rem;
  color: #3f4250;
  background: #ffffff;
  border: 1px solid #d9dadd;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin: auto;
  line-height: 24px;
  font-size: 16px;
}

<div
    data-testid="testing"
  >
    <ul
      class="emotion-0 emotion-1"
    >
      <li
        class="emotion-2 emotion-3"
      >
        <div
          class="emotion-4 emotion-5"
        >
          1
        </div>
        <div
          class="emotion-6 emotion-7"
        >
          Item 1 small
        </div>
      </li>
    </ul>
  </div>
</DocumentFragment>
`;
